# swift-downloader

./: .gitignore  CMakeLists.txt  README.md
src/: Swift-Downloader.qrc  downloadfile.cpp  downloadfile.h  downloadworker.cpp  downloadworker.h  inputform.cpp  inputform.h  main.cpp  mainwindow.cpp  mainwindow.h
src/core/: downloadfile.cpp  downloadfile.h
src/ui/: inputform.cpp  inputform.h  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  DownloadFileTest.cpp  MainWindowTest.cpp
